# tc57cim

./: .copier-answers.yml  .gitignore  CODEOWNERS  README.md  antora-playbook.local.yml  antora-playbook.yml  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/rulesets/: protect-docs-branches.json  protect-major-branches.json
.github/workflows/: build_and_publish_site.yml  preview_release.yml  release_major_version.yml  release_minor_version.yml  release_patch_version.yml
Schemas/: TC57CIM.IEC61970.yml  TC57CIM.IEC62325.yml  TC57CIM.yml
Schemas/TC57CIM/TC57CIM/: IEC61968.yml  IEC61970.yml  IEC62325.yml  PackageDependencies.yml
documentation/: antora.yml
information_models/: TC57CIM.IEC61968.yml  im_tc57cim.schema.linkml.yml
information_models/TC57CIM/: TC57CIM.yml
schemas/: .yml  CIM.yml  TC57CIM.yml
schemas/TC57CIM/: IEC61968.yml  IEC61970.yml  IEC62325.yml  PackageDependencies.yml
schemas/TC57CIM/IEC61968/: AssetInfo.yml  AssetMeas.yml  Assets.yml  Common.yml  Customers.yml  DER.yml  DocIEC61968.yml  InfIEC61968.yml  LoadControl.yml  Metering.yml  Operations.yml  PaymentMetering.yml  Work.yml
schemas/TC57CIM/IEC61970/: Base.yml  Dynamics.yml  InfIEC61970.yml
schemas/TC57CIM/IEC62325/: DocIEC62325.yml  Environmental.yml  InfIEC62325.yml  MarketCommon.yml  MarketManagement.yml  MarketOperations.yml
src/docs/: antora.yml
ui/templates/: enumeration_page.adoc.jinja2  index_page.adoc.jinja2  navigation_page.adoc.jinja2  slot_page.adoc.jinja2
v0.0.1/: antora.yml
v1.0.0/: antora.yml
v1.1.0/: antora.yml
(+4204 files in other folders)
