[project]
name = "im-tc57cim"
requires-python = "^3.12"
dependencies = [
    "linkml >= 1.8.4, < 1.9",
    "linkml-runtime >= 1.8.1, < 1.9",
    "linkml-asciidoc-generator @ git+https://github.com/Netbeheer-Nederland/linkml-asciidoc-generator.git@v0.3.3",
    "gen-linkml-profile @ git+https://github.com/Netbeheer-Nederland/gen-linkml-profile.git",
    "check-jsonschema (>=0.31.0,<0.32.0)",
]

[tool.poetry]
package-mode = false
